[package]
name = "las-crs"
version = "0.1.0"
edition = "2021"
authors = ["Øyvind Hjermstad <@yvind>]
description = "Get the CRS from a las::Header"
homepage = "https://github.com/yvind/las-crs"
repository = "https://github.com/yvind/las-crs"
readme = "README.md"
license = "MIT"
keywords = ["lidar", "crs"]

[dependencies]
byteorder = "1.5.0"
las = "0.9.3"
log = "0.4.25"
thiserror = "2.0.11"